Changed JSON url loading to PHP
Easier way to manipulate data through PHP for later sorting in BootstrapTable and removing of uneccessary rows

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="container pb-4">			
 			<h1>Parkirna mesta</h1>		
 			
-			<table class="table-striped" id="table" data-toggle="table" data-url="ParkirnaMesta.json" data-sortable="true" data-unique-id="prostCas">				
+			<table class="table-striped" id="table" data-toggle="table" data-url="skripta.php" data-sortable="true" data-unique-id="prostCas">				
 				<thead class="bg-success text-light">			
 					<tr>					
 						<th data-field="Cona" data-formatter="bold" class="text-center" data-sortable="true">Cona</th>						
