All functions are now in PHP script

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<th data-field="PrvaUra" data-formatter="cena" class="text-right d-none d-lg-table-cell" data-sortable="true">Cena za prvo uro</th>						
 						<th data-field="NovaUra" data-formatter="cena" class="text-right d-none d-lg-table-cell" data-sortable="true">Cena za vsako naslednjo uro</th>
 						<th data-field="" data-formatter="cenePodatki" class="d-none d-sm-table-cell d-lg-none text-nowrap" data-sortable="true">Cena</th>
-						<th data-field="" data-formatter="prostCas" data-sortable="true">Stanje</th>					
+						<th data-field="Stanje" data-formatter="Slice" data-sortable="true">Stanje</th>					
 					</tr>				
 				</thead>			
 			</table>		
