--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 	</head>
 	<body>		
 		<div class="container pb-4">			
-			<h1>Parkirna mesta</h1>		
+			<h1>Parkirna mesta</h1>
+			<h6 id="date"></h6>
 			
-			<table class="table-striped" id="table" data-toggle="table" data-url="skripta.php" data-sortable="true" data-unique-id="prostCas">				
+			<table class="table-striped" id="table" data-toggle="table" data-url="skripta.php" data-sortable="true" data-sort-name="Stanje" data-unique-id="prostCas">				
 				<thead class="bg-success text-light">			
 					<tr>					
 						<th data-field="Cona" data-formatter="bold" class="text-center" data-sortable="true">Cona</th>						
